ADD: Refining The Build

--- a/src/Chats.css
+++ b/src/Chats.css
@@ -4,6 +4,32 @@
   width: 250px;
 }
 
+.chats_takePicIcon {
+  position: absolute;
+  background-color: white;
+  border-radius: 200px;
+  color: gray;
+  font-size: 40px !important;
+  cursor: pointer;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.chats_searchIcon {
+  color: white;
+  font-size: 13px !important;
+}
+
+.chats_chatIcon {
+  color: white;
+  font-size: 18px !important;
+}
+
+.chats_takePicIcon:hover {
+  opacity: 0.8;
+}
+
 .chats_header {
   display: flex;
   justify-content: space-between;
